Mon Nov 23 09:44:26 1998  Richard Henderson <rth@cygnus.com>

	* configure.in: Append mh-ppcpic and mh-elfalphapic as appropriate.

1998-08-17  Mark Mitchell  <mark@markmitchell.com>

	* stdexcept: Put things in the std namespace, if appropriate.

1998-07-12  Jason Merrill  <jason@yorick.cygnus.com>

	* Makefile.in (VERSION): Bump to 2.9.0.

1998-07-12  Lars Albertsson <lalle@sics.se>

	* std/bastring.cc (find_last_of): Fix.
	(find_last_not_of): Likewise.

1998-07-06  Manfred Hollstein  <manfred@s-direktnet.de>

	* configure.in (INSTALLDIR): Make sed pattern failsafe.

1998-07-06  Ulrich Drepper  <drepper@cygnus.com>

	* std/bastring.h (class basic_string): Correct iterator return
	values in insert member functions.

1998-07-02  Ulrich Drepper  <drepper@cygnus.com>

	* std/bastring.h (class basic_string): Return correct iterators in
	erase member functions.

1998-06-24  Manfred Hollstein  <manfred@s-direktnet.de>

	* Makefile.in (INSTALLDIR): Add comment to document the fact,
	this macro will be properly initialized at make's runtime.
	(install): Add initialization of INSTALLDIR depending on $(libsubdir)
	and ${enable_version_specific_runtime_libs}; use $${INSTALLDIR} shell
	variable instead of the $(INSTALLDIR) make macro.

Tue Mar 24 10:13:07 1998  Jason Merrill  <jason@yorick.cygnus.com>

	* std/bastring.cc (basic_string::copy): Mark const here, too.

1998-03-23 15:59  Ulrich Drepper  <drepper@cygnus.com>

	* std/bastring.h (basic_string::copy): Mark copy function as const.
	Reported by Scott Schurr <scotts@ims.com>.

Thu Mar  5 09:23:28 1998  Manfred Hollstein  <manfred@s-direktnet.de>

	* configure.in: Make locating frag files failsafe even for the
	special case if configuring and building in srcdir.

1998-03-04 12:37  Ulrich Drepper <drepper@cygnus.com>

	* cinst.cc [INSERT] (operator<<): Correct type of numeric argument.

Fri Feb  6 01:36:21 1998  Manfred Hollstein  <manfred@s-direktnet.de>
