@@ -1,0 +1,7 @@
+# Base shared lib for OpenBSD i386
+
+LIBS    = $(ARLIB) $(SHLIB) $(SHLINK) mshlink
+SHFLAGS = -nostdlib -Wl,-Bshareable,-Bforcearchive
+SHDEPS  = -lm
+DEPLIBS = ../$(SHLIB)
+
