@@ -1,0 +1,3 @@
+# tell we want the mt-safe version
+MT_CFLAGS = -D_IO_MTSAFE_IO -D_PTHREADS
+
